# tuxscale

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
src/: app.rs  main.rs  tailscale.rs  tray.rs
src/ui/: dashboard.rs  exit_node.rs  mod.rs  netcheck.rs  options.rs  peers.rs
