[package]
name = "tuxscale"
version = "0.1.0"
edition = "2021"
description = "A native Linux GUI for the Tailscale VPN client"
license = "MIT"
repository = "https://github.com/dfrederick15/tuxscale"
keywords = ["tailscale", "vpn", "gui", "tray", "linux"]
categories = ["gui", "network-programming", "command-line-utilities"]
readme = "README.md"
exclude = ["assets/icon.png"]

[[bin]]
name = "tuxscale"
path = "src/main.rs"

[dependencies]
iced = { version = "0.14", features = ["tokio"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tray-icon = { version = "0.21", default-features = false }
image = { version = "0.25", default-features = false, features = ["png"] }
gtk = { version = "0.18", features = ["v3_24"] }

[build-dependencies]
resvg = "0.44"
